--- a/css/resume.css
+++ b/css/resume.css
@@ -131,7 +131,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #282a36 !important;
 }
 
 .text-primary {
